修改B站消息管理的一些功能

--- a/docs/tools/01-B站实用接口.md
+++ b/docs/tools/01-B站实用接口.md
@@ -1,56 +1,127 @@
-# 🛠 B站评论 & 消息管理工具
+# B站评论消息管理工具
+
+<style>
+.bili-comment-manager {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
+
+/* 如果组件外层有容器 */
+.artifact-container {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
+</style>
 
 <BilibiliCommentManager/>
 
-## 🌟 功能特点
+---
 
-| 功能 | 描述 | Emoji |
-|------|------|-------|
-| 管理回复 | 查看并管理自己发出的评论回复 | 📝 |
-| 管理点赞 | 查看收到的评论点赞 | ❤️ |
-| 批量删除 | 快速清理不想要的评论和消息 | 🗑️ |
+## ✨ 功能特点
 
-## 📝 使用说明
+### 核心功能
+- 📥 **快速加载** - 并发加载所有回复/点赞消息，支持实时查看进度
+- ✅ **批量选择** - 一键全选当前已加载数据，支持单独勾选
+- 🗑️ **灵活删除** - 可单独删除评论、消息通知，或同时删除两者
+- ⏸️ **随时中断** - 加载和删除过程可随时中断，已加载/已删除数据保留
+- 📊 **实时进度** - 显示加载数量和删除进度，操作状态一目了然
+- 💾 **数据保留** - 中断加载后已获取数据保留，可继续操作
 
-### 1️⃣ 获取必需的 Cookie
+### 操作类型
+- 💬 **回复与@** - 管理收到的评论回复和@通知
+- ❤️ **收到喜欢** - 查看和管理收到的点赞消息
 
-要使用本工具，需要从 B站网页中获取以下三项 Cookie：
+---
 
-- **SESSDATA**  
-- **bili_jct**  
-- **DedeUserID**  
+## 📋 使用说明
 
-#### 获取步骤：
+### 步骤 1：获取 Cookie
 
-1. 打开 B站网页版，按下 **F12** 打开开发者工具  
-2. 切换到 **“应用/存储 (Application/Storage)”**  
-3. 找到 **“Cookies → https://www.bilibili.com”**  
-4. 找到以下字段并复制对应值：
+1. 登录 [B站网页版](https://www.bilibili.com)
+2. 按 `F12` 打开开发者工具
+3. 切换到 **Application（应用）** 或 **Storage（存储）** 标签
+4. 左侧找到 **Cookies → https://www.bilibili.com**
+5. 复制以下三个值：
 
-| Cookie 名称 | 说明 | Emoji |
-|------------|-----|-------|
-| SESSDATA  | 登录会话凭证 | 🔑 |
-| bili_jct  | CSRF 验证用 token | 🛡️ |
-| DedeUserID | 用户 ID | 🆔 |
+| Cookie 名称 | 说明 | 示例值 |
+|------------|------|--------|
+| `SESSDATA` | 登录凭证 | `1a2b3c4d%2C1234567890%2Cabcde*12` |
+| `bili_jct` | 安全令牌 | `1234567890abcdef1234567890abcdef` |
+| `DedeUserID` | 用户ID | `123456789` |
 
+6. 在工具输入框中粘贴，格式如下：
+```
+SESSDATA=1a2b3c4d%2C1234567890%2Cabcde*12; bili_jct=1234567890abcdef1234567890abcdef; DedeUserID=123456789
+```
 
-5. 在工具页面粘贴到 **Cookie 输入框**：
+### 步骤 2：加载数据
 
-SESSDATA=你的SESSDATA值; bili_jct=你的bili_jct值; DedeUserID=你的DedeUserID值
+1. 点击 **"📥 加载全部数据"** 按钮
+2. 等待加载完成（可随时点击"中断"停止）
+3. 加载的数据会实时显示在列表中
 
-> ⚠️ 注意：一定要用英文分号 `;` 分隔三项 Cookie
+### 步骤 3：选择要删除的项
 
+- 点击 **"全选当前"** 选中所有已加载数据
+- 或单独勾选想要删除的项目
 
-### 2️⃣ 删除评论与消息
+### 步骤 4：执行删除
 
-1. ✅ 选择 **要删除的评论或消息**  
-2. 🗑️ 点击 **“删除选中项”** 或 **“批量删除”**  
-3. ⚡ 工具会自动删除对应评论及相关的推送消息  
+根据需求选择删除方式：
 
-> 删除操作完全在本地执行，不上传数据，安全可靠。
+| 按钮 | 功能 | 说明 |
+|------|------|------|
+| 🗑️ 删除评论 | 仅删除评论内容 | 消息通知保留 |
+| 📬 删除消息通知 | 仅删除消息记录 | 评论内容保留 |
+| 💣 删除评论&消息 | 同时删除两者 | 彻底清理 |
 
-### 3️⃣ 小提示
+---
 
-- 💡 使用前建议先备份重要评论  
-- ⏳ 每次登录后 Cookie 有效期有限，过期需重新获取  
-- ❌ 批量删除操作不可恢复，请谨慎操作  
+## ⚠️ 注意事项
+
+### 安全性
+- ✅ **所有操作在浏览器本地执行**，不会上传 Cookie 到任何服务器
+- ✅ Cookie 仅用于调用 B站官方 API，与网页登录权限相同
+- ⚠️ 请勿将 Cookie 分享给他人，避免账号被盗用
+
+### 操作提醒
+- ⚠️ **删除操作不可恢复**，已删除的评论和消息无法找回
+- 💡 删除评论会从 B站彻底移除该评论
+- 💡 删除消息通知只清理消息中心的提醒，不影响评论本身
+- 💡 中断删除操作后，已删除的数据无法恢复，未处理的数据保留在列表中
+
+### Cookie 有效期
+- ⏰ Cookie 会在一段时间后过期，需要重新获取
+- 🔄 如果操作失败提示"未登录"，请重新获取 Cookie
+
+### 性能提示
+- 🚀 加载使用并发技术，速度比逐页加载快 3 倍以上
+- 📊 大量数据（1000+ 条）加载可能需要 10-30 秒，请耐心等待
+- ⏸️ 如数据量过大可随时中断，已加载数据会保留
+
+---
+
+## 🆘 常见问题
+
+**Q: 为什么提示 Cookie 无效？**  
+A: 请检查是否包含完整的 `SESSDATA`、`bili_jct` 和 `DedeUserID` 三项，且用分号 `;` 分隔
+
+**Q: 删除后能恢复吗？**  
+A: 不能。删除操作直接调用 B站 API，数据从服务器删除后无法恢复
+
+**Q: 中断加载后数据会丢失吗？**  
+A: 不会。中断时已加载的数据会保留在列表中，可继续操作
+
+**Q: 删除评论和删除消息有什么区别？**  
+A: 删除评论会从 B站彻底移除评论内容；删除消息只清理消息中心的通知记录
+
+**Q: 为什么显示的数据比实际少？**  
+A: 可能是 B站 API 限制或账号设置，建议重新加载或检查隐私设置
+
+---
+
+## 📌 版本信息
+
+- **当前版本**：支持并发加载、实时进度显示、中断恢复
+- **适用平台**：B站网页版 Cookie
+- **浏览器要求**：现代浏览器（Chrome、Edge、Firefox 等）
